--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
 <!--            <version>4.0.1</version>-->
 <!--            <scope>compile</scope>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
     </dependencies>
 
